syntax = "proto3";

package moments;

option go_package = "github.com/dirty-bro-tech/peers-touch-proto/v1/moments";

// PEERS_GENERATION_CONFIG:
// target: peers-touch-station/backend/proto
// target: peers-touch-station/desktop/lib/model/proto
// target: peers-touch-mobile/lib/model/proto
// model_only: true

import "google/protobuf/timestamp.proto";

// Moment represents a single post/share from a family member
message Moment {
  string id = 1;                                    // Unique identifier
  string author_id = 2;                            // Family member who posted
  string author_name = 3;                          // Display name of author
  string content = 4;                              // Text content/idea/thought
  repeated MediaAttachment media = 5;              // Photos, videos, etc.
  MomentType type = 6;                            // Type of moment
  repeated string tags = 7;                        // Tags for categorization
  Location location = 8;                           // Optional location info
  Privacy privacy = 9;                             // Privacy settings
  int32 likes_count = 10;                         // Number of likes
  int32 comments_count = 11;                      // Number of comments
  google.protobuf.Timestamp created_at = 12;      // When posted
  google.protobuf.Timestamp updated_at = 13;      // Last modified
}

// MediaAttachment represents photos, videos, or other media
message MediaAttachment {
  string id = 1;                                   // Unique identifier
  MediaType type = 2;                             // Type of media
  string url = 3;                                 // Storage URL
  string thumbnail_url = 4;                       // Thumbnail for videos/large images
  string caption = 5;                             // Optional caption
  int64 file_size = 6;                           // File size in bytes
  string mime_type = 7;                          // MIME type
  int32 width = 8;                               // Image/video width
  int32 height = 9;                              // Image/video height
  int32 duration = 10;                           // Video duration in seconds
}

// Location information for moments
message Location {
  double latitude = 1;                            // GPS latitude
  double longitude = 2;                           // GPS longitude
  string address = 3;                             // Human-readable address
  string city = 4;                               // City name
  string country = 5;                            // Country name
}

// Comment on a moment
message Comment {
  string id = 1;                                  // Unique identifier
  string moment_id = 2;                          // Parent moment ID
  string author_id = 3;                          // Who commented
  string author_name = 4;                        // Display name
  string content = 5;                            // Comment text
  string parent_comment_id = 6;                  // For nested replies
  int32 likes_count = 7;                         // Comment likes
  google.protobuf.Timestamp created_at = 8;      // When commented
  google.protobuf.Timestamp updated_at = 9;      // Last modified
}

// Like/reaction on moments or comments
message Like {
  string id = 1;                                  // Unique identifier
  string user_id = 2;                            // Who liked
  string target_id = 3;                          // Moment or comment ID
  LikeTargetType target_type = 4;                // What was liked
  ReactionType reaction = 5;                     // Type of reaction
  google.protobuf.Timestamp created_at = 6;      // When liked
}

// Family member profile
message FamilyMember {
  string id = 1;                                  // Unique identifier
  string name = 2;                               // Display name
  string email = 3;                              // Email address
  string avatar_url = 4;                         // Profile picture
  string bio = 5;                                // Short biography
  FamilyRole role = 6;                           // Role in family
  bool is_active = 7;                           // Account status
  google.protobuf.Timestamp joined_at = 8;       // When joined
  google.protobuf.Timestamp last_seen = 9;       // Last activity
}

// Family group/circle
message Family {
  string id = 1;                                  // Unique identifier
  string name = 2;                               // Family name
  string description = 3;                        // Family description
  repeated string member_ids = 4;                // List of member IDs
  string admin_id = 5;                           // Family admin
  string invite_code = 6;                        // Invitation code
  bool is_private = 7;                          // Privacy setting
  google.protobuf.Timestamp created_at = 8;      // When created
  google.protobuf.Timestamp updated_at = 9;      // Last modified
}

// Enums
enum MomentType {
  MOMENT_TYPE_UNSPECIFIED = 0;
  MOMENT_TYPE_TEXT = 1;                          // Text-only post
  MOMENT_TYPE_PHOTO = 2;                         // Photo post
  MOMENT_TYPE_VIDEO = 3;                         // Video post
  MOMENT_TYPE_LIFE_UPDATE = 4;                   // Life milestone
  MOMENT_TYPE_MEMORY = 5;                        // Throwback/memory
  MOMENT_TYPE_ACHIEVEMENT = 6;                   // Achievement/celebration
}

enum MediaType {
  MEDIA_TYPE_UNSPECIFIED = 0;
  MEDIA_TYPE_IMAGE = 1;
  MEDIA_TYPE_VIDEO = 2;
  MEDIA_TYPE_AUDIO = 3;
  MEDIA_TYPE_DOCUMENT = 4;
}

enum Privacy {
  PRIVACY_UNSPECIFIED = 0;
  PRIVACY_FAMILY_ONLY = 1;                       // Only family members
  PRIVACY_CLOSE_FAMILY = 2;                     // Immediate family only
  PRIVACY_PUBLIC = 3;                           // Public within app
}

enum LikeTargetType {
  LIKE_TARGET_TYPE_UNSPECIFIED = 0;
  LIKE_TARGET_TYPE_MOMENT = 1;
  LIKE_TARGET_TYPE_COMMENT = 2;
}

enum ReactionType {
  REACTION_TYPE_UNSPECIFIED = 0;
  REACTION_TYPE_LIKE = 1;
  REACTION_TYPE_LOVE = 2;
  REACTION_TYPE_LAUGH = 3;
  REACTION_TYPE_WOW = 4;
  REACTION_TYPE_SAD = 5;
  REACTION_TYPE_ANGRY = 6;
}

enum FamilyRole {
  FAMILY_ROLE_UNSPECIFIED = 0;
  FAMILY_ROLE_PARENT = 1;
  FAMILY_ROLE_CHILD = 2;
  FAMILY_ROLE_GRANDPARENT = 3;
  FAMILY_ROLE_SIBLING = 4;
  FAMILY_ROLE_SPOUSE = 5;
  FAMILY_ROLE_EXTENDED = 6;                      // Extended family
}

// Request/Response messages for API
message CreateMomentRequest {
  Moment moment = 1;
}

message CreateMomentResponse {
  Moment moment = 1;
}

message GetMomentsRequest {
  string family_id = 1;
  int32 page_size = 2;
  string page_token = 3;
  MomentType type_filter = 4;
  string author_filter = 5;
}

message GetMomentsResponse {
  repeated Moment moments = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message AddCommentRequest {
  Comment comment = 1;
}

message AddCommentResponse {
  Comment comment = 1;
}

message AddLikeRequest {
  Like like = 1;
}

message AddLikeResponse {
  Like like = 1;
}